--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Header Section -->
     <header>
         <!-- Navbar -->
-        <div class="navbar bg-base-100">
+        <div class="navbar">
             <div class="navbar-start flex-1">
 
             <!-- Dropdown -->
@@ -94,6 +94,112 @@
 
             </div>
         </div>
+
+        <!-- Hero Section -->
+        <section>
+
+            <!-- Slider -->
+            <div class="carousel w-full mt-12">
+
+                <!-- Slider One -->
+                <div id="slide1" class="carousel-item relative w-full bg-bg items-center lg:justify-between rounded-lg flex-col lg:flex-row">
+
+                    <!-- Text Content -->
+                    <div class="p-4 lg:p-24 space-y-5">
+                        <h1 class="text-6xl font-bold text-black">Ride-on R15 V4 with Smile</h1>
+                        <p>Amet minim mollit non deserunt ullamco <br>
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                        <button class="btn bg-primary text-white">Purchase</button>
+                    </div>
+
+                    <!-- Img Content -->
+                    <div class="p-4 lg:p-24 mt-12">
+                        <img src="./images/slider/bike1.png"/>
+                    </div>
+
+                    <!-- Slider btn -->
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+
+                </div>
+
+                <!-- Slider Two -->
+                <div id="slide2" class="carousel-item relative w-full bg-bg items-center lg:justify-between rounded-lg flex-col lg:flex-row">
+
+                    <!-- Text Content -->
+                    <div class="p-4 lg:p-24 space-y-5">
+                        <h1 class="text-6xl font-bold text-black">Ride-on R15 V4 with Smile</h1>
+                        <p>Amet minim mollit non deserunt ullamco <br>
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                        <button class="btn bg-primary text-white">Purchase</button>
+                    </div>
+
+                    <!-- Img Content -->
+                    <div class="p-4 lg:p-24 mt-12">
+                        <img src="./images/slider/bike2.png"/>
+                    </div>
+
+                    <!-- Slider btn -->
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+
+                </div>
+
+                <!-- Slider Three -->
+                <div id="slide3" class="carousel-item relative w-full bg-bg items-center lg:justify-between rounded-lg flex-col lg:flex-row">
+
+                    <!-- Text Content -->
+                    <div class="p-4 lg:p-24 space-y-5">
+                        <h1 class="text-6xl font-bold text-black">Ride-on R15 V4 with Smile</h1>
+                        <p>Amet minim mollit non deserunt ullamco <br>
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                        <button class="btn bg-primary text-white">Purchase</button>
+                    </div>
+
+                    <!-- Img Content -->
+                    <div class="p-4 lg:p-24 mt-12">
+                        <img src="./images/slider/bike3.png"/>
+                    </div>
+
+                    <!-- Slider btn -->
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+
+                </div>
+
+                <!-- Slider Four -->
+                <div id="slide4" class="carousel-item relative w-full bg-bg items-center lg:justify-between rounded-lg flex-col lg:flex-row">
+
+                    <!-- Text Content -->
+                    <div class="p-4 lg:p-24 space-y-5">
+                        <h1 class="text-6xl font-bold text-black">Ride-on R15 V4 with Smile</h1>
+                        <p>Amet minim mollit non deserunt ullamco <br>
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                        <button class="btn bg-primary text-white">Purchase</button>
+                    </div>
+
+                    <!-- Img Content -->
+                    <div class="p-4 lg:p-24 mt-12">
+                        <img src="./images/slider/bike4.png"/>
+                    </div>
+
+                    <!-- Slider btn -->
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+
+                </div>
+
+            </div>
+            
+        </section>
     </header>
 
     <!-- Main Section -->
