Featured Bike Section Done

--- a/index.html
+++ b/index.html
@@ -205,6 +205,25 @@
     <!-- Main Section -->
     <main>
 
+        <!-- Featured Bike Section -->
+        <section class="mt-48">
+
+            <!-- Text Content -->
+            <div>
+                <h1 class="text-center font-bold text-black text-2xl lg:text-5xl">Fetured Bikes In This Year</h1>
+                <p class="text-center font-semibold text-primary mt-3 ">Best bike collection</p>
+                <hr class="h-[2px] w-20 mt-1 mb-11 border-0 bg-primary mx-auto">
+            </div>
+
+            <!-- Img Content -->
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-60 gap-28 p-4">
+                <img src="./images/others/feature-bike.png" alt="">
+                <img src="./images/others/feature-bike.png" alt="">
+                <img src="./images/others/feature-bike.png" alt="">
+             </div>
+            
+        </section>
+        
     </main>
 
     <!-- Footer Section -->
