Latest News Section Done

--- a/index.html
+++ b/index.html
@@ -224,6 +224,71 @@
             
         </section>
         
+        <!-- Latest News Section -->
+         <section class="mt-32 p-4">
+
+            <!-- Title -->
+            <h1 class="font-bold text-black text-5xl text-center mb-12">latest News</h1>
+
+            <!-- Card -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+
+                <!-- Card One -->
+                <div class="card bg-base-100 shadow-md lg:shadow-xl">
+
+                    <!-- Img Content -->
+                    <figure class="px-10 pt-10">
+                        <img src="images/others/latest1.png" alt="Bike" class="rounded-xl" />
+                    </figure>
+
+                    <!-- Text Content -->
+                    <div class="card-body text-center">
+                        <h2 class="card-title text-black">Ducati XDIAVEL S-73</h2>
+                        <p class="text-left mb-4 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn btn-outline border-primary text-primary hover:bg-primary hover:border-none">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card Two -->
+                <div class="card bg-base-100 shadow-md lg:shadow-xl">
+
+                    <!-- Img Content -->
+                    <figure class="px-10 pt-10">
+                        <img src="images/others/latest1.png" alt="Bike" class="rounded-xl" />
+                    </figure>
+
+                    <!-- Text Content -->
+                    <div class="card-body text-center">
+                        <h2 class="card-title text-black">Ducati XDIAVEL S-73</h2>
+                        <p class="text-left mb-4 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn btn-outline border-primary text-primary hover:bg-primary hover:border-none">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Card Three -->
+                <div class="card bg-base-100 shadow-md lg:shadow-xl">
+
+                    <!-- Img Content -->
+                    <figure class="px-10 pt-10">
+                        <img src="images/others/latest1.png" alt="Bike" class="rounded-xl" />
+                    </figure>
+
+                    <!-- Text Content -->
+                    <div class="card-body text-center">
+                        <h2 class="card-title text-black">Ducati XDIAVEL S-73</h2>
+                        <p class="text-left mb-4 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn btn-outline border-primary text-primary hover:bg-primary hover:border-none">Buy Now</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+         </section>
     </main>
 
     <!-- Footer Section -->
