Happy Clients section done

--- a/index.html
+++ b/index.html
@@ -289,6 +289,113 @@
 
             </div>
          </section>
+
+        <!-- Happy Clients -->
+        <section class="mt-32 p-4">
+
+            <!-- Title -->
+            <h1 class="font-bold text-black text-5xl text-center mb-12">Happy <span class="text-primary">Clients says</span></h1>
+
+            <!-- Reviews -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+
+                <!-- Card One -->
+                <div class="card border-4 border-gray-100 items-center">
+
+                    <!-- Img Content -->
+                    <div class="px-10 pt-10">
+                        <img src="images/others/user-1.png" alt="Bike" class="w-40 rounded-full"/>
+                    </div>
+
+                    <!-- Text Content -->
+                    <div class="card-body">
+                        <p class="mb-4 text-gray-500 text-center">Slate helps you see how 
+                            many more days you need 
+                            to work to reach your financial 
+                            goal for the month and year.</p>
+
+                        <!-- Ratings -->
+                        <div class="rating gap-2 mx-auto">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                        </div>
+
+                        <!-- Clients Details -->
+                         <div>
+                            <h3 class="text-center font-bold text-blue-400 my-3">Regina Miles</h3>
+                            <h3 class="text-center font-bold">Banker</h3>
+                         </div>
+                    </div>
+                </div>
+
+                <!-- Card Two -->
+                <div class="card border-4 border-gray-100 items-center">
+
+                    <!-- Img Content -->
+                    <div class="px-10 pt-10">
+                        <img src="images/others/user-2.png" alt="Bike" class="w-40 rounded-full"/>
+                    </div>
+
+                    <!-- Text Content -->
+                    <div class="card-body">
+                        <p class="mb-4 text-gray-500 text-center">Slate helps you see how 
+                            many more days you need 
+                            to work to reach your financial 
+                            goal for the month and year.</p>
+
+                        <!-- Ratings -->
+                        <div class="rating gap-2 mx-auto">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                        </div>
+
+                        <!-- Clients Details -->
+                         <div>
+                            <h3 class="text-center font-bold text-blue-400 my-3">Regina Miles</h3>
+                            <h3 class="text-center font-bold">Banker</h3>
+                         </div>
+                    </div>
+                </div>
+                <!-- Card Three -->
+                <div class="card border-4 border-gray-100 items-center">
+
+                    <!-- Img Content -->
+                    <div class="px-10 pt-10">
+                        <img src="images/others/user-3.png" alt="Bike" class="w-40 rounded-full"/>
+                    </div>
+
+                    <!-- Text Content -->
+                    <div class="card-body">
+                        <p class="mb-4 text-gray-500 text-center">Slate helps you see how 
+                            many more days you need 
+                            to work to reach your financial 
+                            goal for the month and year.</p>
+
+                        <!-- Ratings -->
+                        <div class="rating gap-2 mx-auto">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                        </div>
+
+                        <!-- Clients Details -->
+                         <div>
+                            <h3 class="text-center font-bold text-blue-400 my-3">Regina Miles</h3>
+                            <h3 class="text-center font-bold">Banker</h3>
+                         </div>
+                    </div>
+                </div>
+
+            </div>
+         </section>
     </main>
 
     <!-- Footer Section -->
