FAQ Section Done

--- a/index.html
+++ b/index.html
@@ -256,12 +256,12 @@
 
                     <!-- Img Content -->
                     <figure class="px-10 pt-10">
-                        <img src="images/others/latest1.png" alt="Bike" class="rounded-xl" />
+                        <img src="images/others/latest2.png" alt="Bike" class="rounded-xl" />
                     </figure>
 
                     <!-- Text Content -->
                     <div class="card-body text-center">
-                        <h2 class="card-title text-black">Ducati XDIAVEL S-73</h2>
+                        <h2 class="card-title text-black">Motorcycles & Scooters</h2>
                         <p class="text-left mb-4 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                         <div class="card-actions">
                             <button class="btn btn-outline border-primary text-primary hover:bg-primary hover:border-none">Buy Now</button>
@@ -274,12 +274,12 @@
 
                     <!-- Img Content -->
                     <figure class="px-10 pt-10">
-                        <img src="images/others/latest1.png" alt="Bike" class="rounded-xl" />
+                        <img src="images/others/latest3.png" alt="Bike" class="rounded-xl" />
                     </figure>
 
                     <!-- Text Content -->
                     <div class="card-body text-center">
-                        <h2 class="card-title text-black">Ducati XDIAVEL S-73</h2>
+                        <h2 class="card-title text-black">2021 Honda CBR500R</h2>
                         <p class="text-left mb-4 text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
                         <div class="card-actions">
                             <button class="btn btn-outline border-primary text-primary hover:bg-primary hover:border-none">Buy Now</button>
@@ -288,6 +288,7 @@
                 </div>
 
             </div>
+
          </section>
 
         <!-- Happy Clients -->
@@ -317,9 +318,9 @@
                         <!-- Ratings -->
                         <div class="rating gap-2 mx-auto">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
-                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-primary" />
                         </div>
 
@@ -395,7 +396,58 @@
                 </div>
 
             </div>
-         </section>
+        </section>
+
+        <!-- FAQ Section -->
+        <section>
+
+            <!-- Title -->
+            <h1 class="text-4xl lg:text-5xl text-center font-bold mt-16 lg:mt-32 mb-12 p-4">Frequently Asked <span class="text-primary">Questions</span></h1>
+
+            <!-- Content -->
+            <div class="lg:flex justify-between items-center p-4">
+
+                <!-- Img -->
+                <div class="flex-1">
+                    <img src="./images/others/faq.png" alt="" class="mb-16 w-full lg:w-2/3">
+                </div>
+
+                <!-- FAQ -->
+                <div class="space-y-3 flex-1">
+                    <div class="collapse collapse-arrow border-2 border-gray-200 rounded-lg">
+                        <input type="radio" name="my-accordion-2" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">What are the most important things I should
+                            know about riding a bike?</div>
+                        <div class="collapse-content">
+                            <p class="pr-3 text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-arrow border-2 border-gray-200 rounded-lg">
+                            <input type="radio" name="my-accordion-2" />
+                        <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                            new one?</div>
+                        <div class="collapse-content">
+                            <p class="pr-3 text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                    </div>
+                        <div class="collapse collapse-arrow border-2 border-gray-200 rounded-lg">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                            <div class="collapse-content">
+                                <p class="pr-3 text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border-2 border-gray-200 rounded-lg">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                            <div class="collapse-content">
+                                <p class="pr-3 text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
     <!-- Footer Section -->
