--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
 
             <!-- Img Content -->
-             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-60 gap-28 p-4">
+             <div class="grid place-items-center grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-60 gap-28 p-4">
                 <img src="./images/others/feature-bike.png" alt="">
                 <img src="./images/others/feature-bike.png" alt="">
                 <img src="./images/others/feature-bike.png" alt="">
@@ -231,7 +231,7 @@
             <h1 class="font-bold text-black text-5xl text-center mb-12">latest News</h1>
 
             <!-- Card -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="grid place-items-center grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
                 <!-- Card One -->
                 <div class="card bg-base-100 shadow-md lg:shadow-xl">
@@ -298,7 +298,7 @@
             <h1 class="font-bold text-black text-5xl text-center mb-12">Happy <span class="text-primary">Clients says</span></h1>
 
             <!-- Reviews -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="grid place-items-center grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 
                 <!-- Card One -->
                 <div class="card border-4 border-gray-100 items-center">
